# cyberwave-python

./: .gitignore  CONTRIBUTING.md  DEV_TODO.md  Dockerfile  README.md  SECURITY.md  dummy_mesh.glb  import_to_catalog.py  main.py  publish_sdk_repo.sh  pyproject.toml  requirements.txt  run_integration_tests.sh  run_sdk_test.sh  run_tests_with_backend.sh  set_credentials.sh  setup.py
.github/ISSUE_TEMPLATE/: troubleshooting.yml
.github/workflows/: release.yml  test.yml  workflow.yml
.venv312/: pyvenv.cfg
cyberwave/: __init__.py  _version.py  actions.py  agents.py  alerts.py  assets.pyi  assets_api.py  assets_capabilities.json  async_http.py  camera.py  client.py  client.pyi  compact.py  compact_api.py  config.py  constants.py  controller.py  devices.py  environments.py  events.py  exceptions.py  fingerprint.py  geometry.py  http.py  image.py  keyboard.py  locomotion_contracts.py  mission.py  missions.py  ml.py  ml_model_lookup.py  motion.py  mqtt_client.py  navigation.py  nodes.py  placement.py  projects.py  resources.py  rl_tasks.py  robot.py  (+18 more)
cyberwave/assets/: __init__.py  implementations.py  static_assets.py  twin_integration.py
cyberwave/consumers/: __init__.py  callback_hub.py  mqtt_live_view.py  mqtt_snapshot.py  video.py
cyberwave/data/: IMPLEMENTATION_PLAN_CYB_1544.md  __init__.py  api.py  backend.py  config.py  exceptions.py  filesystem_backend.py  fusion.py  header.py  keys.py  recording.py  recording_format.py  ring_buffer.py  utils.py  zenoh_backend.py
cyberwave/data/state_representation/: __init__.py  decode.py  robot_state.py
cyberwave/device_specs/: __init__.py  base.py  fallback.py  registry.py
cyberwave/driver/: __init__.py  base.py  status.py  stream_publish_rate.py
cyberwave/driver/cloud/: __init__.py  (+6 more)
cyberwave/edge/: __init__.py  amr.py  base.py  config.py  health.py  host_metrics.py  platform.py
cyberwave/managers/: __init__.py  policies.py  recordings.py  simulations.py
cyberwave/manifest/: IMPLEMENTATION_PLAN.md  __init__.py  cw_driver.py  driver_config.py  loader.py  schema.py  validator.py
cyberwave/mlmodels/: __init__.py  actions.py  client.py  types.py
cyberwave/models/: __init__.py  cascade.py  cloud.py  loaded_model.py  manager.py  playground.py  types.py
cyberwave/mqtt/: README.md  __init__.py  jointState.py  jointStatePayload.py  listen.py  main.py  messaging.py  pingPayload.py  pongPayload.py  quaternion.py  state.py  twinPositionPayload.py  twinRotationPayload.py  twinScalePayload.py  vector3.py  webRTCOfferPayload.py
cyberwave/rest/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
cyberwave/sensor/: __init__.py  _camera_preview.py  audio_microphone.py  audio_resample.py  av_streamer.py  base_video.py  camera_callback.py  camera_cv2.py  camera_rs.py  camera_sim.py  camera_virtual.py  config.py  manager.py  microphone.py  speaker.py
cyberwave/telemetry/: __init__.py  base.py
cyberwave/twin/: __init__.py  _helpers.py  base.py  camera.py  capability_resolve.py  classes.py  command_factory.py  commands.py  compat.py  driver.py  editor.py  factory.py  handles.py  mixins.py  policy.py  runtime_state.py  simulation_support.py  telemetry.py  transport.py
cyberwave/utils/: __init__.py  depth.py  time_reference.py
cyberwave/vision/: __init__.py  _detection_view.py  annotate.py  anonymize.py
cyberwave/workers/: IMPLEMENTATION_PLAN.md  __init__.py  constants.py  context.py  decode.py  hooks.py  loader.py  main.py  runtime.py
cyberwave/zenoh_mqtt/: __init__.py  bridge.py  config.py  queue.py  topic_mapping.py
docs/: DEVICE_ARCHITECTURE.md  asset_twin_architecture.md  huggingface_style_assets.md  unified_asset_system.md
examples/: README.md  actuate_arm.py  alerts.py  alerts_example.py  architecture_demo.py  asset_twin_demo.py  audio_stream.py  camera_stream.py  capture_depth.py  capture_frame.py  capture_pointcloud.py  centralized_schema_example.py  command_receiver_advanced.py  command_receiver_simple.py  commands_catalog.py  compact.py  consume_video.py  datasets.py  demo_pick_and_place.py  drone_dji_mini.py  drone_hovering.py  edge_worker_detect_people.py  edge_worker_hailo_detect.py  edge_worker_hooks.py  edge_worker_multi_camera.py  end_to_end_example.py  environment_recordings.py  fake_imu_driver.py  flying.py  get_pose.py  get_started.py  go2_locomotion.py  inference_bench.py  joints.py  list_camera_sensor_ids.py  listen_mqtt.py  listen_zenoh_audio.py  listen_zenoh_audio.sh  locomotion.py  missions.py  (+29 more)
examples/ai/: model_predict_on_twin.py  models.py  yolo_minimal.ipynb  yolo_minimal_on_twin.ipynb  yolo_smoke_test.py
examples/nl_arm_controller/: .env.example  README.md  motion.py  nl_arm_controller.py  planner.py  planner_config.py  requirements.txt  vision.py  voice.py
examples/notebooks/: simple_example.ipynb
examples/security_pipeline/: .env.example  README.md  worker.py
examples/so101_mujoco_demo/: .env.example  .gitignore  README.md  justfile  pyproject.toml  so101_mujoco_control.py  so101_mujoco_demo.py
tests/: __init__.py  conftest.py  debug_auth.py  test_affect_autostart_simulation.py  test_alerts.py  test_asset_aliases.py  test_asset_controller_setup.py  test_asset_system.py  test_asset_uploads.py  test_assets.py  test_attachments.py  test_audio_microphone.py  test_audio_pipeline_coherence.py  test_audio_speaker.py  test_av_streamer_health_wiring.py  test_base_ros2_driver_managed_launch.py  test_base_ros2_driver_operation_mode.py  test_base_video_answer_guard.py  test_base_video_health_wiring.py  test_bridge_config.py  test_bridge_integration.py  test_bridge_queue.py  test_bridge_topic_mapping.py  test_camera_cv2_fourcc.py  test_camera_cv2_frame_callback.py  test_camera_cv2_reconnect.py  test_camera_cv2_stream_config.py  test_camera_get_video_sim.py  test_camera_twin_sim_streaming.py  test_camera_virtual_streamer.py  test_capability_resolve.py  test_capture_frame.py  test_cascade_prediction_result.py  test_centralized_schema.py  test_client.py  test_client_auth.py  test_client_runtime_mode.py  test_client_twin.py  test_command_args_schema.py  test_command_inbox.py  (+195 more)
(+656 files in other folders)
