[tool.poetry]
name = "cyberwave"
version = "0.4.2"
description = "Python SDK for Cyberwave"
authors = ["Simone Di Somma <sdisomma@cyberwave.com>", "Vittorio Banfi <vbanfi@cyberwave.com>", "Cyberwave Team <info@cyberwave.com>"]
readme = "README.md"
packages = [
    { include = "cyberwave" }
]
include = [
    { path = "cyberwave/rest", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.10"  # Required by av package (>=3.10)
# Core dependencies for REST API client
urllib3 = "^2.1.0"
python-dateutil = "^2.8.2"
pydantic = "^2"
typing-extensions = "^4.7.1"
# YAML manifest support
pyyaml = ">=6.0"
# MQTT dependencies
paho-mqtt = "^2.1.0"
# numpy (>=2.2 required by pin/cmeel-boost for Python 3.10+)
numpy = ">=1.26.0"
# Optional camera streaming dependencies
aiortc = { version = "^1.5.0", optional = true }
av = { version = "^16.0.1", optional = true }
opencv-python = { version = "^4.8.0", optional = true }
# Optional Zenoh data-bus dependency
eclipse-zenoh = { version = ">=1.0.0", optional = true }
# Optional ML runtime dependencies
ultralytics = { version = ">=8.0.0", optional = true }
onnxruntime = { version = ">=1.16.0", optional = true }
tflite-runtime = { version = ">=2.14.0", optional = true }

[tool.poetry.extras]
camera = ["aiortc", "av", "opencv-python"]
realsense = ["aiortc", "av", "opencv-python", "pyrealsense2"]
zenoh = ["eclipse-zenoh"]
data = ["eclipse-zenoh"]
ml = ["ultralytics"]
ml-onnx = ["onnxruntime"]
ml-opencv = ["opencv-python"]
ml-tflite = ["tflite-runtime"]
ml-all = ["ultralytics", "onnxruntime", "opencv-python", "tflite-runtime"]
onnx = ["onnxruntime"]
tflite = ["tflite-runtime"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^2.8.1"
pytest-asyncio = "^0.23"
mypy = "^1.5"
types-python-dateutil = "^2.8.19.14"

[tool.poetry.scripts]
cyberwave-generate-stubs = "cyberwave.stubs_generator:main"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
