[project]
name = "so101-mujoco-demo"
version = "0.1.0"
description = "SO-101 arm MuJoCo demo — Cyberwave Python SDK example"
requires-python = ">=3.10,<3.13"
dependencies = [
    "cyberwave[camera]",   # SDK + WebRTC camera streaming
    "mujoco>=3.0.0",
    "numpy>=1.24.0",
]

[tool.uv.sources]
# Editable install so the generated cyberwave.rest subpackage resolves correctly
cyberwave = { path = "../../", editable = true }
